--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
@@ -26,3 +27,4 @@ yarn-error.log*
 .firebaserc
 .firebase
 firebase.json
+.zip
